<resources>
    <string name="app_name">MyYummyLunch1</string>

    <string name="button_message1">START</string>
    <string name="button_message2">EXIT</string>
    <string name="button_message3">종료하기</string>
    <string name="button_message4">YES</string>
    <string name="button_message5">NO</string>
    <string name="button_message6">혼자서 결정하기</string>
    <string name="button_message7">여럿이서 결정하기</string>
    <string name="button_message8">RESET</string>
    <string name="button_message9">DONE</string>
    <string name="button_message10">뒤로가기</string>
    <string name="button_message11">선택하기</string>
    <string name="button_message12">랜덤으로 결정하기</string>
    <string name="button_message13">Help?</string>
    <string name="button_message14">식당 목록 내보내기</string>
    <string name="button_message15">다시하기</string>

    <string name="text_message1">MY YUMMY LUNCH</string>
    <string name="text_message2">원하는 조건을 선택하세요(복수선택 가능)</string>
    <string name="text_message3">식사종류</string>
    <string name="text_message4">위치</string>
    <string name="text_message5">가격</string>
    <string name="text_message6">선택완료</string>
    <string name="text_message7">선택완료!맛있게드세요!</string>
    <string name="text_message8">추천 메뉴 :</string>
    <string name="text_message9">식사종류 :</string>
    <string name="text_message10">위치 :</string>
    <string name="text_message11">가격 :</string>


    <string name="check_message1">한식</string>
    <string name="check_message2">저렴</string>
    <string name="check_message3">무난</string>
    <string name="check_message4">호화</string>
    <string name="check_message5">참살이</string>
    <string name="check_message6">오거리</string>
    <string name="check_message7">문캠</string>
    <string name="check_message8">개운사/정후</string>
    <string name="check_message9">양식</string>
    <string name="check_message10">중식</string>
    <string name="check_message11">일식</string>





    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
