<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/AloneButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/button_message6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/TogetherButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/button_message7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/randombutton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:text="@string/button_message12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>